# person_detection_leroy

./: CMakeLists.txt  package.xml  setup.py
cfg/: Tracker.cfg
launch/: tracker.launch
scripts/: detection_node.py  template_node.py
scripts/submodules/: SOD.py  kpr_onnx.py
src/person_detection_robocup/: detection_node.py  template_node.py
src/person_detection_robocup/submodules/: SOD.py  SOD.py.bk  kpr_onnx.py
srv/: TemplateImage.srv
